--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.AKIA6ODU77IO5ES3244O }}
+          aws-secret-access-key: ${{ secrets.yEX8hNVjbf7r+bhGDBgmj2hHNhvtl7iwfWfI96a }}
           aws-region: ap-northeast-3
 
       # Step 4: Initialize Terraform
